--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
     <title>Michelle Marshall Portfolio</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+    <img src="1.png" style="width: 100%;"></img>
+    <img src="2.png" style="width: 100%;"></img>
+    <img src="3.png" style="width: 100%;"></img>
+    <img src="4.png" style="width: 100%;"></img>
+    <img src="5.png" style="width: 100%;"></img>
+    <img src="6.png" style="width: 100%;"></img>
+    <img src="7.png" style="width: 100%;"></img>
+    <img src="8.png" style="width: 100%;"></img>
+    <img src="9.png" style="width: 100%;"></img>
+    <img src="10.png" style="width: 100%;"></img>
+    <img src="11.png" style="width: 100%;"></img>
+    <img src="12.png" style="width: 100%;"></img>
+    <img src="13.png" style="width: 100%;"></img>
+    <img src="14.png" style="width: 100%;"></img>
+    <img src="15.png" style="width: 100%;"></img>
+    <img src="16.png" style="width: 100%;"></img>
+    <img src="17.png" style="width: 100%;"></img>
+    <img src="18.png" style="width: 100%;"></img>
+    <img src="19.png" style="width: 100%;"></img>
+    <img src="20.png" style="width: 100%;"></img>
+    <img src="21.png" style="width: 100%;"></img>
+    <img src="22.png" style="width: 100%;"></img>
+    <img src="23.png" style="width: 100%;"></img>
+    <img src="24.png" style="width: 100%;"></img>
+    <img src="25.png" style="width: 100%;"></img>
+    <img src="26.png" style="width: 100%;"></img>
+    <img src="27.png" style="width: 100%;"></img>
+    <img src="28.png" style="width: 100%;"></img>
+    <img src="29.png" style="width: 100%;"></img>
+    <img src="30.png" style="width: 100%;"></img>
+    <img src="31.png" style="width: 100%;"></img>
+    <img src="32.png" style="width: 100%;"></img>
+    <img src="33.png" style="width: 100%;"></img>
+    <img src="34.png" style="width: 100%;"></img>
+    <img src="35.png" style="width: 100%;"></img>
+    <img src="36.png" style="width: 100%;"></img>
+    <img src="37.png" style="width: 100%;"></img>
+    <img src="38.png" style="width: 100%;"></img>
+    <img src="39.png" style="width: 100%;"></img>
+    <img src="40.png" style="width: 100%;"></img>
+    <img src="41.png" style="width: 100%;"></img>
+    <img src="42.png" style="width: 100%;"></img>
+</body>
 </html>
